--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "bulma": "^0.7.1",
+    "bulma-badge": "^1.0.1",
     "material-design-icons": "^3.0.1",
     "nuxt": "^1.0.0",
     "nuxt-buefy": "^0.0.4",
